# google-chat-mcp-server

./: .gitignore  Dockerfile  LICENSE  README.md  auth_cli.py  google_chat.py  pyproject.toml  requirements.txt  server.py  server_auth.py
.github/workflows/: docker-publish.yml
